--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,15 @@ license = {text = "MIT"}
 requires-python = ">=3.11"
 dependencies = [
     "setuptools",
-    "trl @ git+https://github.com/willccbb/trl.git@grpo-envs",
+    "trl",
     "liger-kernel>=0.5.2",
-    "flash-attn==2.7.3",
     "deepspeed>=0.15.4",
     "accelerate>=1.3.0",
     "vllm>=0.7.2",
-    "wandb"
+    "wandb",
+    "torch>=2.5.1",
+    "flash-attn==2.7.3",
 ]
+
+[tool.uv.sources]
+trl = { path = "../trl", editable = true }
