--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,9 @@ dependencies = [
     "wandb",
     "rich",
     "trl>=0.17.0",
-    "requests>=2.32.3",
+    "requests",
     "vllm>=0.8.5.post1",
-    "openai>=1.81.0",
+    "openai",
     "datasets>=3.6.0",
     "transformers",
 ]
@@ -29,9 +29,9 @@ all = [
     "ipykernel",
     "ipywidgets",
     "duckduckgo-search",
-    "brave-search",
     "reasoning-gym",
     "smolagents>=1.15.0",
+    "fastmcp",
     "textarena",
     "nltk"
 ]
