--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "vllm>=0.8.5.post1",
     "openai>=1.81.0",
     "datasets>=3.6.0",
-    "transformers==4.51.1",
+    "transformers<4.52.0",
 ]
 
 [project.optional-dependencies]
