--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,6 +106,7 @@ build-backend = "setuptools.build_meta"
 [dependency-groups]
 dev = [
     "build>=1.2.2.post1",
+    "ruff>=0.12.3",
     "twine>=6.1.0",
 ]
 
