--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,19 @@ dependencies = [
     "pydantic>=2.11.7",
     "jinja2>=3.1.6",
     "rich",
+    "duckduckgo-search>=8.1.1",
+    "hatchling>=1.27.0",
+    "pytest>=7.0.0",
+    "pytest-asyncio>=0.21.0",
+    "pytest-cov>=4.0.0",
+    "pre-commit>=4.3.0",
+    "nest-asyncio>=1.6.0",
+    "ipykernel",
+    "ipywidgets>=8.1.7",
+    "ruff>=0.12.9",
+    "torch>=2.7.1",
+    "trl>=0.21.0",
+    "vllm>=0.10.1",
 ]
 
 [project.optional-dependencies]
