reuse code from original t-bench repo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "openai",
     "datasets",
     "pydantic>=2.11.7",
+    "ruamel.yaml>=0.17.0",
 ]
 
 [project.optional-dependencies]
