minor changes to documentation

--- a/environments/terminalbench/pyproject.toml
+++ b/environments/terminalbench/pyproject.toml
@@ -1,5 +1,6 @@
 [project]
 name = "terminal-bench"
+description = "Terminal-Bench but as an RL environment."
 version = "0.1.0"
 dependencies = [
     "verifiers>=0.1.0",
