--- a/environments/terminalbench/pyproject.toml
+++ b/environments/terminalbench/pyproject.toml
@@ -1,6 +1,7 @@
 [project]
 name = "terminal-bench"
 description = "Terminal-Bench but as an RL environment."
+tags = ["terminal-bench", "multi-turn", "reasoning","train", "eval", "sandbox"]
 version = "0.1.0"
 dependencies = [
     "verifiers>=0.1.0",
