--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .venv/
 venv/
 env/
+verifiers_env/
 .env
 .env.local
 uv.lock
@@ -53,3 +54,6 @@ environments/vf_bfcl_v3/
 environments/vf_hotpotqa/
 environments/vf_truthful_qa/
 environments/vf_reverse_text_mini/
+run_aidanbench.sh
+run_short_aidanbench.sh
+run_aidanbench_nano_vs_mini.sh
