--- a/environments/aidanbench/pyproject.toml
+++ b/environments/aidanbench/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.11"
 dependencies = [
     "verifiers>=0.1.2.post0",
     "datasets",
+    "numpy",
+    "openai",
 ]
 
 [build-system]
@@ -14,5 +16,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build]
-include = ["aidanbench.py"]
-
+include = ["aidanbench.py", "question_list.py"]
