--- a/environments/mcp_tool/pyproject.toml
+++ b/environments/mcp_tool/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "mcp-tool-env"
+name = "mcp-tool"
 version = "0.1.0"
 description = "MCP tool environment with Prime sandboxes"
 tags = ["mcp", "tools", "multi-turn", "sandbox"]
@@ -15,4 +15,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build]
-include = ["mcp_tool_env.py"]
+include = ["mcp_tool.py"]
