Add Claude Code environment for single-shot tasks
The added class enables interaction with Claude Code for code-related
tasks through a standardized environment interface.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "rich",
     "textual",
     "openai-agents>=0.0.7",
+    "claude-code-sdk>=0.0.22",
 ]
 
 [project.optional-dependencies]
