add deps to toml

--- a/environments/mcp_env/pyproject.toml
+++ b/environments/mcp_env/pyproject.toml
@@ -5,6 +5,8 @@ tags = ["train", "eval"]
 version = "0.1.0"
 requires-python = ">=3.11"
 dependencies = [
+    "mcp>=1.14.1",
+    "python-dotenv>=1.1.1",
     "verifiers>=0.1.2.post1",
 ]
 
