--- a/environments/arc_agi_3/pyproject.toml
+++ b/environments/arc_agi_3/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "httpx>=0.27",
     "pydantic>=2.7",
-    "arc-agi-3-agents @ git+https://github.com/arcprize/ARC-AGI-3-Agents",
+    "arc-agi-3-agents",
     "verifiers>=0.1.3.post0",
 ]
 
@@ -15,5 +15,11 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.metadata]
+allow-direct-references = true
+
 [tool.hatch.build]
 include = ["arc_agi_3.py"]
+
+[tool.uv.sources]
+arc-agi-3-agents = {git = "https://github.com/arcprize/ARC-AGI-3-Agents.git"}
