--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,23 @@ envs = [
     "nltk",
     "textarena",
 ]
+all = [
+    "torch>=2.7.0",
+    "transformers",
+    "accelerate>=1.4.0",
+    "requests",
+    "peft",
+    "wandb",
+    "trl>=0.17.0",
+    "vllm>=0.9.2",
+    "liger-kernel>=0.5.10",
+    "deepspeed",
+    "math-verify>=0.8.0",
+    "duckduckgo-search",
+    "brave-search",
+    "nltk",
+    "textarena",
+]
 
 [project.scripts]
 vf-eval = "verifiers.scripts.eval:main"
