--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -35,6 +35,6 @@ jobs:
         with:
           version: "latest"
       - name: Install dependencies
-        run: uv sync
+        run: uv sync --all-extras
       - name: Run ty
         run: uv run ty check .
