--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,7 @@ train = [
     "wandb",
     "trl>=0.17.0",
     "vllm>=0.9.2",
-    "liger-kernel>=0.5.10",
+    "liger-kernel>=0.5.10 ; sys_platform != 'darwin'",
     "deepspeed",
 ]
 envs = [
@@ -71,21 +71,8 @@ envs = [
     "textarena",
 ]
 all = [
-    "torch>=2.7.0",
-    "transformers",
-    "accelerate>=1.4.0",
-    "requests",
-    "peft",
-    "wandb",
-    "trl>=0.17.0",
-    "vllm>=0.9.2",
-    "liger-kernel>=0.5.10",
-    "deepspeed",
-    "math-verify>=0.8.0",
-    "duckduckgo-search",
-    "brave-search",
-    "nltk",
-    "textarena",
+    "verifiers[train]",
+    "verifiers[envs]",
 ]
 
 [project.scripts]
@@ -155,6 +142,7 @@ norecursedirs = [".git", ".tox", "dist", "build", "*.egg", "__pycache__"]
 [tool.ty.rules]
 unresolved-import = "warn"
 unknown-argument = "warn"
+unused-ignore-comment = "error"
 
 [tool.ty.src]
 exclude = ["environments"]
