--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,24 +26,17 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
     
-    - name: Cache pip packages
-      uses: actions/cache@v4
+    - name: Install uv
+      uses: astral-sh/setup-uv@v4
       with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-${{ matrix.python-version }}-
-          ${{ runner.os }}-pip-
-    
+        version: "latest"
+
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e .
-        pip install pytest pytest-asyncio pytest-cov nest-asyncio
+      run: uv sync --extra dev
     
     - name: Run tests
       run: |
