--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
         version: "latest"
 
     - name: Install dependencies
-      run: uv sync --extra dev
+      run: uv sync
     
     - name: Run tests
       run: |
